// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneIntegrationCreate/> render() should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/phone"
          >
            Phone
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Add Phone Number
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-lg-6"
      >
        <p>
          Create a new phone number in Gorgias or forward calls from an existing number to a Gorgias internal number. To learn more about forwarding existing calls, check out
           
          <a
            href="https://docs.gorgias.com/voice-and-phone/gorgias-phone-integration"
            rel="noopener noreferrer"
            target="_blank"
          >
            our phone docs
          </a>
          .
        </p>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-lg-6 col-xl-7"
      >
        <form
          class=""
        >
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="title"
            >
              Phone title
            </label>
            <div
              class="container"
            >
              <div
                class="picker emojiPicker"
              >
                <span
                  class="material-icons empty icon"
                >
                  insert_emoticon
                </span>
              </div>
              <input
                class="input form-control"
                id="title"
                placeholder="Ex: Company Support Line"
                required=""
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="phoneFunction"
            >
              Function
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Standard number
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="phoneFunction"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Interactive Voice Response (IVR)
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="country"
            >
              Country
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label placeholder"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Select an option
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="country"
                      required=""
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Canada
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      United States
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="type"
            >
              Type
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label placeholder"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Select an option
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="type"
                      required=""
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Local
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Toll-free
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="area-code"
            >
              Area code
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label placeholder"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Select an option
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="area-code"
                      required=""
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <h6
                    class="dropdown-header"
                    tabindex="-1"
                  >
                    No result
                  </h6>
                </div>
              </div>
            </div>
          </div>
          <button
            class="mt-5 btn btn-success"
            type="submit"
          >
            Add phone number
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneIntegrationCreate/> render() should render when IVR function is selected 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/phone"
          >
            Phone
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Add Phone Number
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-lg-6"
      >
        <p>
          Create a new phone number in Gorgias or forward calls from an existing number to a Gorgias internal number. To learn more about forwarding existing calls, check out
           
          <a
            href="https://docs.gorgias.com/voice-and-phone/gorgias-phone-integration"
            rel="noopener noreferrer"
            target="_blank"
          >
            our phone docs
          </a>
          .
        </p>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-lg-6 col-xl-7"
      >
        <form
          class=""
        >
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="title"
            >
              Phone title
            </label>
            <div
              class="container"
            >
              <div
                class="picker emojiPicker"
              >
                <span
                  class="material-icons empty icon"
                >
                  insert_emoticon
                </span>
              </div>
              <input
                class="input form-control"
                id="title"
                placeholder="Ex: Company Support Line"
                required=""
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="phoneFunction"
            >
              Function
            </label>
            <div>
              <div
                class="dropdown show"
              >
                <div
                  aria-expanded="true"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Interactive Voice Response (IVR)
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="phoneFunction"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="false"
                  class="options optionsFullWidth dropdown-menu show"
                  role="menu"
                  style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Standard number
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="country"
            >
              Country
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label placeholder"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Select an option
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="country"
                      required=""
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Canada
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      United States
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="type"
            >
              Type
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label placeholder"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Select an option
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="type"
                      required=""
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Local
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Toll-free
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="area-code"
            >
              Area code
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label placeholder"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Select an option
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="area-code"
                      required=""
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <h6
                    class="dropdown-header"
                    tabindex="-1"
                  >
                    No result
                  </h6>
                </div>
              </div>
            </div>
          </div>
          <button
            class="mt-5 btn btn-success"
            type="submit"
          >
            Add phone number
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneIntegrationCreate/> render() should render when a country and a state are selected 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/phone"
          >
            Phone
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Add Phone Number
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-lg-6"
      >
        <p>
          Create a new phone number in Gorgias or forward calls from an existing number to a Gorgias internal number. To learn more about forwarding existing calls, check out
           
          <a
            href="https://docs.gorgias.com/voice-and-phone/gorgias-phone-integration"
            rel="noopener noreferrer"
            target="_blank"
          >
            our phone docs
          </a>
          .
        </p>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-lg-6 col-xl-7"
      >
        <form
          class=""
        >
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="title"
            >
              Phone title
            </label>
            <div
              class="container"
            >
              <div
                class="picker emojiPicker"
              >
                <span
                  class="material-icons empty icon"
                >
                  insert_emoticon
                </span>
              </div>
              <input
                class="input form-control"
                id="title"
                placeholder="Ex: Company Support Line"
                required=""
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="phoneFunction"
            >
              Function
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Standard number
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="phoneFunction"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Interactive Voice Response (IVR)
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="country"
            >
              Country
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label"
                      style="min-width: 10px; opacity: 1;"
                    >
                      United States
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="country"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Canada
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="type"
            >
              Type
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Local
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="type"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Toll-free
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="state"
            >
              State
            </label>
            <div>
              <div
                class="dropdown show"
              >
                <div
                  aria-expanded="true"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Alabama
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="state"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="false"
                  class="options optionsFullWidth dropdown-menu show"
                  role="menu"
                  style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Arizona
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Arkansas
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      California
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Colorado
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Connecticut
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Delaware
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      District Of Columbia
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Florida
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Georgia
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Idaho
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Illinois
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Indiana
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Iowa
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Kansas
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Kentucky
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Louisiana
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Maine
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Maryland
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Massachusetts
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Michigan
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Minnesota
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Mississippi
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Missouri
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Montana
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Nebraska
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Nevada
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      New Jersey
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      New Mexico
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      New York
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      North Carolina
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      North Dakota
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Ohio
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Oklahoma
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Oregon
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Pennsylvania
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Rhode Island
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      South Carolina
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      South Dakota
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Tennessee
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Texas
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Utah
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Vermont
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Virginia
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Washington
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      West Virginia
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Wisconsin
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="area-code"
            >
              Area code
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label placeholder"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Select an option
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="area-code"
                      required=""
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Birmingham (205)
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Mobile (251)
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Huntsville (256)
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Montegomery (334)
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Huntsville (938)
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <button
            class="mt-5 btn btn-success"
            type="submit"
          >
            Add phone number
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneIntegrationCreate/> render() should render when type "Toll-free" is selected 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/phone"
          >
            Phone
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Add Phone Number
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-lg-6"
      >
        <p>
          Create a new phone number in Gorgias or forward calls from an existing number to a Gorgias internal number. To learn more about forwarding existing calls, check out
           
          <a
            href="https://docs.gorgias.com/voice-and-phone/gorgias-phone-integration"
            rel="noopener noreferrer"
            target="_blank"
          >
            our phone docs
          </a>
          .
        </p>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-lg-6 col-xl-7"
      >
        <form
          class=""
        >
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="title"
            >
              Phone title
            </label>
            <div
              class="container"
            >
              <div
                class="picker emojiPicker"
              >
                <span
                  class="material-icons empty icon"
                >
                  insert_emoticon
                </span>
              </div>
              <input
                class="input form-control"
                id="title"
                placeholder="Ex: Company Support Line"
                required=""
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="phoneFunction"
            >
              Function
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Standard number
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="phoneFunction"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Interactive Voice Response (IVR)
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="country"
            >
              Country
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Canada
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="country"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      United States
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="type"
            >
              Type
            </label>
            <div>
              <div
                class="dropdown show"
              >
                <div
                  aria-expanded="true"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Toll-free
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="type"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="false"
                  class="options optionsFullWidth dropdown-menu show"
                  role="menu"
                  style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Local
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="area-code"
            >
              Area code
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label placeholder"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Select an option
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="area-code"
                      required=""
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      833
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      844
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      855
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      866
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      877
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      888
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <button
            class="mt-5 btn btn-success"
            type="submit"
          >
            Add phone number
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
